Fix layout issues on iPhone

--- a/_includes/full_css.css
+++ b/_includes/full_css.css
@@ -4,7 +4,7 @@ body {
     font-family: "San Francisco", sans-serif;
 
     margin: 0 auto;
-    width: 1250px
+    width: 1250px;
 }
 
 a, a:visited {
